# andps

./: .gitignore  LICENSE  README.md  pyproject.toml  todo.md
ANDPS/cma_es/scripts/: envs.py  es.py  eval_estools.py  train.ipynb  train_estools.py  utils.py
ANDPS/go1_lfd/scripts/: nn_utils.py  plot_utils.py  train.py  unpack_data.py
ANDPS/lasa_images/: README.md
ANDPS/lasa_images/data/: lasa_image_data_Angle.npz  lasa_image_data_JShape.npz  lasa_image_data_Khamesh.npz  lims.csv
ANDPS/lasa_images/models/: fo_lasa_image_3_20.pt
ANDPS/lasa_images/scripts/: eval.py  nice_plot.py  train.py  utils.py
ANDPS/lasa_lfd/: README.md  requirements.txt
ANDPS/lasa_lfd/models/: lasa_Khamesh_25_1000.pt  lasa_Sine_7_1000.pt  lasa_Trapezoid_24_1000.pt
ANDPS/lasa_lfd/scripts/: errors_plot.py  eval_big.py  generate_datasets.py  nice_plot.py  train_big.py  utils.py
ANDPS/panda_images/: README.md
ANDPS/panda_images/data/: target.npy
ANDPS/panda_images/models/: panda_image_10.pt  panda_image_100.pt  panda_image_110.pt  panda_image_120.pt  panda_image_130.pt  panda_image_140.pt  panda_image_150.pt  panda_image_160.pt  panda_image_170.pt  panda_image_180.pt  panda_image_190.pt  panda_image_20.pt  panda_image_200.pt  panda_image_30.pt  panda_image_40.pt  panda_image_50.pt  panda_image_60.pt  panda_image_70.pt  panda_image_80.pt  (+3 more)
ANDPS/panda_lfd/: README.md
ANDPS/pouring_task_lfd/: README.md
ANDPS/rl_push/: .gitignore
andps/: __init__.py  andps.py  andps_utils.py
docs/: index.html
experiments/panda_images/: README.md
experiments/pouring_task_lfd/: README.md
(+152 files in other folders)
